# interviews

./: pyproject.toml
assets/question_files/interview_questions_Student/: data_science_question_bank _student.ipynb
data/: day.csv  historical_records.csv
interviews/: ICE_analyst.ipynb
interviews/Capco/: notebook.ipynb
interviews/ICE/: ICE_analyst.ipynb  ICE_analyst_JD.txt  interview_with_vijay_narayan.txt  job_notes.text
interviews/ICE/RESEARCH/: notes.txt  technotes.txt
interviews/ICE/interview_questions_Student/: data_science_question_bank _student.ipynb
interviews/interview_questions_Student/: data_science_question_bank _student.ipynb  sector.xlsx
interviews/stoxx/: notebook.ipynb  notes.md
ipython_notebooks/: imputation.ipynb  pandas_notes.ipynb  python_core.ipynb  visualization_notes.ipynb
notes/: mysql_contents.txt
scripts/: generators.py
shell_scripts/: mysql_install.sh
sql_scripts/: quick_notes.sql  vscode_sql_connection.session.sql
