[tool.poetry]
name = "interviews"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"  # ">=3.9,<4.0" #
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
notebook = "^6.5.4"
openpyxl = "^3.1.2"
ipython-sql = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
